feat: expand combined glosses with saru

--- a/dictionary/generate_combined_glosses.ipynb
+++ b/dictionary/generate_combined_glosses.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -45,7 +45,8 @@
       "8\the\t['～か']\n",
       "9\ti\t['意味的に目的語を補い', 'それ', 'tranverb}}を{{intrverb}}化する']\n",
       "10\tne\t['～に']\n",
-      "11\tsi\t[]\n"
+      "11\tsi\t[]\n",
+      "FF Saru: 975\n"
      ]
     }
    ],
@@ -87,6 +88,17 @@
     "    if i > 10:\n",
     "        break\n",
     "\n",
+    "class FFEntry(TypedDict):\n",
+    "    kana: str\n",
+    "    latn: str\n",
+    "    glss: str\n",
+    "    pos: str\n",
+    "\n",
+    "with open(OUTPUT_DIR / \"ff-ainu-saru-terms.json\", \"r\") as f:\n",
+    "    ff_saru_terms: list[FFEntry] = json.load(f)\n",
+    "\n",
+    "print(\"FF Saru:\", len(ff_saru_terms))\n",
+    "\n",
     "# with open(OUTPUT_DIR / \"wiktionary_ainu_word_compositions.json\", \"r\") as f:\n",
     "#     wiktionary_morphemes = json.load(f)\n",
     "\n",
@@ -118,14 +130,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "15499\n",
+      "16508\n",
       "wan\t['十人', '十']\n",
       "tu\t['両方', '第二', '二つ', '多くの', '二人', '沢山の']\n",
       "rak\t['～の気配がある', '～の匂いがする', '～の味がある']\n",
@@ -148,8 +160,13 @@
     "    k: v[\"glosses\"] for k, v in wiktionary_glosses.items() if v[\"glosses\"]\n",
     "}\n",
     "\n",
+    "for entry in ff_saru_terms:\n",
+    "    if entry[\"kana\"] in combined_glosses and combined_glosses[entry[\"kana\"]]:\n",
+    "        continue\n",
+    "    combined_glosses[entry[\"kana\"]] = list(entry[\"glss\"])\n",
+    "\n",
     "for entry in tommy1949_glosses:\n",
-    "    if entry[\"lemma\"] in wiktionary_glosses and wiktionary_glosses[entry[\"lemma\"]]:\n",
+    "    if entry[\"lemma\"] in combined_glosses and combined_glosses[entry[\"lemma\"]]:\n",
     "        continue\n",
     "    if not entry[\"glosses\"]:\n",
     "        continue\n",
