feat: expand karahuto data by updating pos

--- a/dictionary/generate_karahuto_data.ipynb
+++ b/dictionary/generate_karahuto_data.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 264,
+   "execution_count": 285,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 265,
+   "execution_count": 286,
    "metadata": {},
    "outputs": [
     {
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 266,
+   "execution_count": 287,
    "metadata": {},
    "outputs": [
     {
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 267,
+   "execution_count": 288,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,13 +123,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 268,
+   "execution_count": 289,
    "metadata": {},
    "outputs": [],
    "source": [
     "from utils.sakhalin import extrapolate_sakhalin_from_hokkaido\n",
     "\n",
-    "with open(\"output/wiktionary_ainu_part_of_speech.json\") as f:\n",
+    "\n",
+    "with open(\"output/combined_part_of_speech.json\") as f:\n",
     "    part_of_speech = json.load(f)\n",
     "    extrapolated_part_of_speech = {}\n",
     "    for lemma, poses in part_of_speech.items():\n",
@@ -150,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 269,
+   "execution_count": 290,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 270,
+   "execution_count": 291,
    "metadata": {},
    "outputs": [
     {
@@ -232,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 271,
+   "execution_count": 292,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -264,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 272,
+   "execution_count": 293,
    "metadata": {},
    "outputs": [
     {
@@ -322,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 273,
+   "execution_count": 294,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -377,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 274,
+   "execution_count": 295,
    "metadata": {},
    "outputs": [
     {
@@ -497,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 275,
+   "execution_count": 296,
    "metadata": {},
    "outputs": [
     {
@@ -758,6 +759,7 @@
       "pu already has ja glosses\n",
       "renka already has ja glosses\n",
       "kasuy already has ja glosses\n",
+      "a already has ja glosses\n",
       "ama already has ja glosses\n",
       "apunitara already has ja glosses\n",
       "arawanpe already has ja glosses\n",
@@ -766,15 +768,11 @@
       "cas already has ja glosses\n",
       "cispo already has ja glosses\n",
       "ciw already has ja glosses\n",
+      "e already has ja glosses\n",
       "ekari already has ja glosses\n",
       "ekasure already has ja glosses\n",
-      "epes already has ja glosses\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "en= already has ja glosses\n",
+      "epes already has ja glosses\n",
       "eramusinne already has ja glosses\n",
       "erekus already has ja glosses\n",
       "etunne already has ja glosses\n",
@@ -793,6 +791,7 @@
       "iso already has ja glosses\n",
       "isokamuy already has ja glosses\n",
       "ituye already has ja glosses\n",
+      "ka already has ja glosses\n",
       "kama already has ja glosses\n",
       "kamu already has ja glosses\n",
       "kan already has ja glosses\n",
@@ -810,6 +809,7 @@
       "kisma already has ja glosses\n",
       "kito already has ja glosses\n",
       "kiyanne already has ja glosses\n",
+      "ko already has ja glosses\n",
       "konci already has ja glosses\n",
       "konrusuy already has ja glosses\n",
       "kotuye already has ja glosses\n",
@@ -827,6 +827,13 @@
       "mono already has ja glosses\n",
       "mos already has ja glosses\n",
       "muye already has ja glosses\n",
+      "nay already has ja glosses\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "neyke already has ja glosses\n",
       "noko already has ja glosses\n",
       "noya already has ja glosses\n",
@@ -841,21 +848,26 @@
       "oyasi already has ja glosses\n",
       "oyna already has ja glosses\n",
       "payki already has ja glosses\n",
+      "pe already has ja glosses\n",
       "pinni already has ja glosses\n",
       "pipa already has ja glosses\n",
       "ponhekaci already has ja glosses\n",
       "ponno already has ja glosses\n",
       "poo already has ja glosses\n",
       "pukusakina already has ja glosses\n",
+      "ray already has ja glosses\n",
       "reraru already has ja glosses\n",
       "reske already has ja glosses\n",
       "rika already has ja glosses\n",
+      "roski already has ja glosses\n",
       "rupus already has ja glosses\n",
       "ruwesan already has ja glosses\n",
       "ruyno already has ja glosses\n",
+      "sa already has ja glosses\n",
       "sas already has ja glosses\n",
       "se already has ja glosses\n",
       "serus already has ja glosses\n",
+      "seta already has ja glosses\n",
       "sumari already has ja glosses\n",
       "sune already has ja glosses\n",
       "sunku already has ja glosses\n",
@@ -875,7 +887,9 @@
       "tusu already has ja glosses\n",
       "tuy already has ja glosses\n",
       "tuymano already has ja glosses\n",
-      "utasa already has ja glosses\n"
+      "un already has ja glosses\n",
+      "utasa already has ja glosses\n",
+      "wen already has ja glosses\n"
      ]
     }
    ],
@@ -901,7 +915,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 276,
+   "execution_count": 297,
    "metadata": {},
    "outputs": [
     {
@@ -965,7 +979,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 277,
+   "execution_count": 298,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -988,7 +1002,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 278,
+   "execution_count": 299,
    "metadata": {},
    "outputs": [
     {
@@ -1046,7 +1060,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 279,
+   "execution_count": 300,
    "metadata": {},
    "outputs": [
     {
@@ -1089,7 +1103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 280,
+   "execution_count": 301,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1102,7 +1116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 281,
+   "execution_count": 302,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1119,7 +1133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 282,
+   "execution_count": 303,
    "metadata": {},
    "outputs": [
     {
@@ -1262,7 +1276,6 @@
       "{\"lemma\": \"ma'ii\", \"ja\": [], \"en\": [], \"ru\": [], \"poses\": [], \"frequency\": 14},\n",
       "{\"lemma\": \"ikehe\", \"ja\": [], \"en\": [], \"ru\": [], \"poses\": [], \"frequency\": 14},\n",
       "{\"lemma\": \"cehkihci\", \"ja\": [], \"en\": [], \"ru\": [], \"poses\": [], \"frequency\": 14},\n",
-      "{\"lemma\": \"si\", \"ja\": [], \"en\": [], \"ru\": [], \"poses\": [\"n\", \"root\"], \"frequency\": 14},\n",
       "{\"lemma\": \"hunpe\", \"ja\": [], \"en\": [], \"ru\": [], \"poses\": [], \"frequency\": 13},\n",
       "{\"lemma\": \"oyas\", \"ja\": [], \"en\": [], \"ru\": [], \"poses\": [], \"frequency\": 13},\n",
       "{\"lemma\": \"omanu\", \"ja\": [], \"en\": [], \"ru\": [], \"poses\": [], \"frequency\": 13},\n",
@@ -1421,7 +1434,6 @@
       "{\"lemma\": \"kotanta\", \"ja\": [], \"en\": [], \"ru\": [], \"poses\": [], \"frequency\": 8},\n",
       "{\"lemma\": \"sahne\", \"ja\": [], \"en\": [], \"ru\": [], \"poses\": [], \"frequency\": 8},\n",
       "{\"lemma\": \"monasno\", \"ja\": [], \"en\": [], \"ru\": [], \"poses\": [], \"frequency\": 8},\n",
-      "{\"lemma\": \"katkemat\", \"ja\": [], \"en\": [], \"ru\": [], \"poses\": [\"n\"], \"frequency\": 8},\n",
       "{\"lemma\": \"kaawa\", \"ja\": [], \"en\": [], \"ru\": [], \"poses\": [], \"frequency\": 7},\n",
       "{\"lemma\": \"sapanu\", \"ja\": [], \"en\": [], \"ru\": [], \"poses\": [], \"frequency\": 7},\n",
       "{\"lemma\": \"pirikaruy\", \"ja\": [], \"en\": [], \"ru\": [], \"poses\": [], \"frequency\": 7},\n",
@@ -1550,7 +1562,6 @@
       "{\"lemma\": \"=\", \"ja\": [], \"en\": [], \"ru\": [], \"poses\": [], \"frequency\": 6},\n",
       "{\"lemma\": \"anakne\", \"ja\": [], \"en\": [], \"ru\": [], \"poses\": [\"parti\"], \"frequency\": 6},\n",
       "{\"lemma\": \"easka\", \"ja\": [], \"en\": [], \"ru\": [], \"poses\": [], \"frequency\": 6},\n",
-      "{\"lemma\": \"oar\", \"ja\": [], \"en\": [], \"ru\": [], \"poses\": [\"adv\"], \"frequency\": 6},\n",
       "{\"lemma\": \"otakaawa\", \"ja\": [], \"en\": [], \"ru\": [], \"poses\": [], \"frequency\": 5},\n",
       "{\"lemma\": \"po'us\", \"ja\": [], \"en\": [], \"ru\": [], \"poses\": [], \"frequency\": 5},\n",
       "{\"lemma\": \"cehkii\", \"ja\": [], \"en\": [], \"ru\": [], \"poses\": [], \"frequency\": 5},\n",
@@ -2021,7 +2032,6 @@
       "{\"lemma\": \"ki=\", \"ja\": [], \"en\": [], \"ru\": [], \"poses\": [], \"frequency\": 3},\n",
       "{\"lemma\": \"danilka\", \"ja\": [], \"en\": [], \"ru\": [], \"poses\": [], \"frequency\": 3},\n",
       "{\"lemma\": \"kesanto\", \"ja\": [], \"en\": [], \"ru\": [], \"poses\": [], \"frequency\": 3},\n",
-      "{\"lemma\": \"rep\", \"ja\": [], \"en\": [], \"ru\": [], \"poses\": [\"n\", \"v\", \"num\"], \"frequency\": 3},\n",
       "{\"lemma\": \"in=\", \"ja\": [], \"en\": [], \"ru\": [], \"poses\": [], \"frequency\": 3},\n",
       "{\"lemma\": \"ukoramupirika\", \"ja\": [], \"en\": [], \"ru\": [], \"poses\": [], \"frequency\": 3},\n",
       "{\"lemma\": \"konep\", \"ja\": [], \"en\": [], \"ru\": [], \"poses\": [], \"frequency\": 3},\n",
@@ -2574,10 +2584,8 @@
       "{\"lemma\": \"ek=\", \"ja\": [], \"en\": [], \"ru\": [], \"poses\": [], \"frequency\": 2},\n",
       "{\"lemma\": \"koyson\", \"ja\": [], \"en\": [], \"ru\": [], \"poses\": [], \"frequency\": 2},\n",
       "{\"lemma\": \"eramiskare\", \"ja\": [], \"en\": [], \"ru\": [], \"poses\": [], \"frequency\": 2},\n",
-      "{\"lemma\": \"ku\", \"ja\": [], \"en\": [], \"ru\": [], \"poses\": [\"v\", \"n\"], \"frequency\": 2},\n",
       "{\"lemma\": \"renkáyne\", \"ja\": [], \"en\": [], \"ru\": [], \"poses\": [], \"frequency\": 2},\n",
-      "{\"lemma\": \"ponopono\", \"ja\": [], \"en\": [], \"ru\": [], \"poses\": [], \"frequency\": 2},\n",
-      "{\"lemma\": \"sirkunne\", \"ja\": [], \"en\": [], \"ru\": [], \"poses\": [\"v\"], \"frequency\": 2},\n"
+      "{\"lemma\": \"ponopono\", \"ja\": [], \"en\": [], \"ru\": [], \"poses\": [], \"frequency\": 2},\n"
      ]
     }
    ],
@@ -2604,7 +2612,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 283,
+   "execution_count": 304,
    "metadata": {},
    "outputs": [
     {
@@ -2612,8 +2620,8 @@
      "output_type": "stream",
      "text": [
       "All terms: 2915\n",
-      "All translated: 1463\n",
-      "Translated only ja: 78\n"
+      "All translated: 1469\n",
+      "Translated only ja: 84\n"
      ]
     }
    ],
@@ -2629,7 +2637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 284,
+   "execution_count": 305,
    "metadata": {},
    "outputs": [
     {
@@ -2637,7 +2645,7 @@
      "output_type": "stream",
      "text": [
       "1\n",
-      "78\n"
+      "84\n"
      ]
     }
    ],
