feat: expand karahuto data

--- a/dictionary/generate_karahuto_data.ipynb
+++ b/dictionary/generate_karahuto_data.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 285,
+   "execution_count": 348,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 286,
+   "execution_count": 349,
    "metadata": {},
    "outputs": [
     {
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 287,
+   "execution_count": 350,
    "metadata": {},
    "outputs": [
     {
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 288,
+   "execution_count": 351,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 289,
+   "execution_count": 352,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 290,
+   "execution_count": 353,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 291,
+   "execution_count": 354,
    "metadata": {},
    "outputs": [
     {
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 292,
+   "execution_count": 355,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 293,
+   "execution_count": 356,
    "metadata": {},
    "outputs": [
     {
@@ -323,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 294,
+   "execution_count": 357,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -378,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 295,
+   "execution_count": 358,
    "metadata": {},
    "outputs": [
     {
@@ -498,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 296,
+   "execution_count": 359,
    "metadata": {},
    "outputs": [
     {
@@ -774,7 +774,13 @@
       "en= already has ja glosses\n",
       "epes already has ja glosses\n",
       "eramusinne already has ja glosses\n",
-      "erekus already has ja glosses\n",
+      "erekus already has ja glosses\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "etunne already has ja glosses\n",
       "han already has ja glosses\n",
       "hawki already has ja glosses\n",
@@ -827,13 +833,7 @@
       "mono already has ja glosses\n",
       "mos already has ja glosses\n",
       "muye already has ja glosses\n",
-      "nay already has ja glosses\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "nay already has ja glosses\n",
       "neyke already has ja glosses\n",
       "noko already has ja glosses\n",
       "noya already has ja glosses\n",
@@ -915,7 +915,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 297,
+   "execution_count": 360,
    "metadata": {},
    "outputs": [
     {
@@ -929,6 +929,7 @@
       "input/sakhalin/ff-ainu-karahuto-terms-with-corpus-translated-20.json\n",
       "input/sakhalin/ff-ainu-karahuto-terms-with-corpus-translated-24.json\n",
       "input/sakhalin/ff-ainu-karahuto-terms-with-corpus-translated-8.json\n",
+      "input/sakhalin/ff-ainu-karahuto-terms-with-corpus-translated-29.json\n",
       "input/sakhalin/ff-ainu-karahuto-terms-with-corpus-translated-26.json\n",
       "input/sakhalin/ff-ainu-karahuto-terms-with-corpus-translated-15.json\n",
       "input/sakhalin/ff-ainu-karahuto-terms-with-corpus-translated-4.json\n",
@@ -939,6 +940,7 @@
       "input/sakhalin/ff-ainu-karahuto-terms-with-corpus-translated-10.json\n",
       "input/sakhalin/ff-ainu-karahuto-terms-with-corpus-translated-23.json\n",
       "input/sakhalin/ff-ainu-karahuto-terms-with-corpus-translated-19.json\n",
+      "input/sakhalin/ff-ainu-karahuto-terms-with-corpus-translated-27.json\n",
       "input/sakhalin/ff-ainu-karahuto-terms-with-corpus-translated-7.json\n",
       "input/sakhalin/ff-ainu-karahuto-terms-with-corpus-translated-14.json\n",
       "input/sakhalin/ff-ainu-karahuto-terms-with-corpus-translated-17.json\n",
@@ -948,6 +950,7 @@
       "input/sakhalin/ff-ainu-karahuto-terms-with-corpus-translated-11.json\n",
       "input/sakhalin/ff-ainu-karahuto-terms-with-corpus-translated-18.json\n",
       "input/sakhalin/ff-ainu-karahuto-terms-with-corpus-translated-5.json\n",
+      "input/sakhalin/ff-ainu-karahuto-terms-with-corpus-translated-28.json\n",
       "input/sakhalin/ff-ainu-karahuto-terms-with-corpus-translated-6.json\n"
      ]
     }
@@ -979,7 +982,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 298,
+   "execution_count": 361,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1002,7 +1005,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 299,
+   "execution_count": 362,
    "metadata": {},
    "outputs": [
     {
@@ -1060,7 +1063,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 300,
+   "execution_count": 363,
    "metadata": {},
    "outputs": [
     {
@@ -1103,7 +1106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 301,
+   "execution_count": 364,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1116,7 +1119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 302,
+   "execution_count": 365,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1133,7 +1136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 303,
+   "execution_count": 366,
    "metadata": {},
    "outputs": [
     {
@@ -2612,7 +2615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 304,
+   "execution_count": 367,
    "metadata": {},
    "outputs": [
     {
@@ -2621,7 +2624,7 @@
      "text": [
       "All terms: 2915\n",
       "All translated: 1469\n",
-      "Translated only ja: 84\n"
+      "Translated only ja: 0\n"
      ]
     }
    ],
@@ -2637,15 +2640,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 305,
+   "execution_count": 368,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1\n",
-      "84\n"
+      "0\n"
      ]
     }
    ],
