feat: expand combined gloss with tamura

--- a/dictionary/generate_combined_glosses.ipynb
+++ b/dictionary/generate_combined_glosses.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -21,32 +21,37 @@
      "output_type": "stream",
      "text": [
       "Tommy1949: 14540\n",
-      "0\t=an\t['人は', '人が']\n",
-      "1\t=an\t['その人が']\n",
-      "2\t=as\t['話し相手を含まない私たち']\n",
-      "3\ta\t['煮物の汁が多い']\n",
-      "4\ta\t['名詞を作るときの接頭辞']\n",
-      "5\ta\t['～したなあ！～だなあ！']\n",
-      "6\ta\t['～なのか！']\n",
-      "7\ta （pl.rok )\t['座る', '起きている']\n",
-      "8\t-a　（複数 -rok )\t['過去に話題にしたことを表す']\n",
-      "9\ta p\t['～したものの～したのだが～だったが']\n",
-      "10\ta=\t['一般的に人は～する', 'ここの皆で～する']\n",
-      "11\ta=\t['その人が']\n",
+      "    =an\t['人は', '人が']\n",
+      "    =an\t['その人が']\n",
+      "    =as\t['話し相手を含まない私たち']\n",
+      "    a\t['煮物の汁が多い']\n",
+      "    a\t['名詞を作るときの接頭辞']\n",
+      "    a\t['～したなあ！～だなあ！']\n",
+      "    a\t['～なのか！']\n",
       "Wiktionary: 2231\n",
-      "0\twan\t['十人', '十']\n",
-      "1\ttu\t['両方', '第二', '二つ', '多くの', '二人', '沢山の']\n",
-      "2\trak\t['～の気配がある', '～の匂いがする', '～の味がある']\n",
-      "3\tmi\t['～を着る']\n",
-      "4\ton\t['発酵する']\n",
-      "5\tona\t['父親']\n",
-      "6\tay\t['矢']\n",
-      "7\toro\t['強調する', '～の所', '場所をあらわす名詞の後に置いて', '～の場所として扱えない名詞の後に置いて場所を表す名詞句を作る', '所属形 oro ですでに言及した場所を示す']\n",
-      "8\the\t['～か']\n",
-      "9\ti\t['意味的に目的語を補い', 'それ', 'tranverb}}を{{intrverb}}化する']\n",
-      "10\tne\t['～に']\n",
-      "11\tsi\t[]\n",
-      "FF Saru: 975\n"
+      "    wan\t['十人', '十']\n",
+      "    tu\t['両方', '第二', '二つ', '多くの', '二人', '沢山の']\n",
+      "    rak\t['～の気配がある', '～の匂いがする', '～の味がある']\n",
+      "    mi\t['～を着る']\n",
+      "    on\t['発酵する']\n",
+      "    ona\t['父親']\n",
+      "    ay\t['矢']\n",
+      "FF Saru: 975\n",
+      "    ア\ta=\t私たち\n",
+      "    ア\ta\t座る\n",
+      "    アアン\taan\t～だった\n",
+      "    アイヌ\taynu\t人\n",
+      "    アイヌイタク\tAynuitak\tアイヌ語\n",
+      "    アイヌフラ\taynuhura\t人間のにおい\n",
+      "    アイネ\tayne\t～したあげく\n",
+      "Tamura: 2104\n",
+      "    -a\t['sfx']\t['の尾']\n",
+      "    -aha\t['sfx']\t[]\n",
+      "    -ar\t['sfx']\t['をつくる', 'を人につくってもらう']\n",
+      "    -asnu\t['sfx']\t[]\n",
+      "    -atki\t['sfx']\t[]\n",
+      "    -ci\t['sfx']\t['時']\n",
+      "    -e\t['sfx']\t['に', 'させる', 'を見る', 'に', 'を見せる', '見させる']\n"
      ]
     }
    ],
@@ -67,8 +72,8 @@
     "print(\"Tommy1949:\", len(tommy1949_glosses))\n",
     "\n",
     "for i, gloss in enumerate(tommy1949_glosses):\n",
-    "    print(f\"{i}\\t{gloss['lemma']}\\t{gloss['glosses']}\")\n",
-    "    if i > 10:\n",
+    "    print(f\"    {gloss['lemma']}\\t{gloss['glosses']}\")\n",
+    "    if i > 5:\n",
     "        break\n",
     "\n",
     "\n",
@@ -84,8 +89,8 @@
     "print(\"Wiktionary:\", len(wiktionary_glosses))\n",
     "\n",
     "for i, (lemma, gloss) in enumerate(wiktionary_glosses.items()):\n",
-    "    print(f\"{i}\\t{lemma}\\t{gloss['glosses']}\")\n",
-    "    if i > 10:\n",
+    "    print(f\"    {lemma}\\t{gloss['glosses']}\")\n",
+    "    if i > 5:\n",
     "        break\n",
     "\n",
     "class FFEntry(TypedDict):\n",
@@ -98,6 +103,21 @@
     "    ff_saru_terms: list[FFEntry] = json.load(f)\n",
     "\n",
     "print(\"FF Saru:\", len(ff_saru_terms))\n",
+    "\n",
+    "for i, entry in enumerate(ff_saru_terms):\n",
+    "    print(f\"    {entry['kana']}\\t{entry['latn']}\\t{entry['glss']}\")\n",
+    "    if i > 5:\n",
+    "        break\n",
+    "\n",
+    "with open(OUTPUT_DIR / \"ainu-archive\" / \"tamura-entries-parsed.json\", \"r\") as f:\n",
+    "    tamura_entries = json.load(f)\n",
+    "\n",
+    "print(\"Tamura:\", len(tamura_entries))\n",
+    "\n",
+    "for i, entry in enumerate(tamura_entries):\n",
+    "    print(f\"    {entry['lemma']}\\t{entry['poses']}\\t{entry['glosses']}\")\n",
+    "    if i > 5:\n",
+    "        break\n",
     "\n",
     "# with open(OUTPUT_DIR / \"wiktionary_ainu_word_compositions.json\", \"r\") as f:\n",
     "#     wiktionary_morphemes = json.load(f)\n",
@@ -130,14 +150,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "16508\n",
+      "17124\n",
       "wan\t['十人', '十']\n",
       "tu\t['両方', '第二', '二つ', '多くの', '二人', '沢山の']\n",
       "rak\t['～の気配がある', '～の匂いがする', '～の味がある']\n",
@@ -173,6 +193,10 @@
     "\n",
     "    combined_glosses[entry[\"lemma\"]] = entry[\"glosses\"]\n",
     "\n",
+    "for entry in tamura_entries:\n",
+    "    if entry[\"lemma\"] in combined_glosses and combined_glosses[entry[\"lemma\"]]:\n",
+    "        continue\n",
+    "    combined_glosses[entry[\"lemma\"]] = entry[\"glosses\"]\n",
     "\n",
     "print(len(combined_glosses))\n",
     "for i, (lemma, gloss) in enumerate(combined_glosses.items()):\n",
