--- a/dictionary/generate_karahuto_data.ipynb
+++ b/dictionary/generate_karahuto_data.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -323,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -378,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -498,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -761,13 +761,7 @@
       "kasuy already has ja glosses\n",
       "a already has ja glosses\n",
       "ama already has ja glosses\n",
-      "apunitara already has ja glosses\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "apunitara already has ja glosses\n",
       "arawanpe already has ja glosses\n",
       "aw already has ja glosses\n",
       "ca already has ja glosses\n",
@@ -782,7 +776,14 @@
       "eramusinne already has ja glosses\n",
       "erekus already has ja glosses\n",
       "etunne already has ja glosses\n",
-      "han already has ja glosses\n",
+      "han already has ja glosses"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
       "hawki already has ja glosses\n",
       "hayta already has ja glosses\n",
       "hemoy already has ja glosses\n",
@@ -921,7 +922,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -989,7 +990,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1012,7 +1013,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -1070,7 +1071,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -1113,7 +1114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1126,11 +1127,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(\"output/sakhali-terms-extended.json\", \"w\") as f:\n",
+    "SAKHALIN_OUTPUT_DIR = Path(\"output/ainu-itah\")\n",
+    "SAKHALIN_OUTPUT_DIR.mkdir(parents=True, exist_ok=True)\n",
+    "with open(SAKHALIN_OUTPUT_DIR / \"sakhalin-terms-extended.json\", \"w\") as f:\n",
     "    json.dump(terms, f, ensure_ascii=False)\n"
    ]
   },
@@ -1143,7 +1146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -2616,7 +2619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -2641,7 +2644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
