feat: update tokenized_corpus with combined part of speech

--- a/corpus/create_tokenized_corpus.ipynb
+++ b/corpus/create_tokenized_corpus.ipynb
@@ -17,72 +17,24 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7c27fa7a04ed401ab3884096c89f3baa",
+       "model_id": "b06e4cfdf8d746388d486a665ce79546",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "README.md:   0%|          | 0.00/1.71k [00:00<?, ?B/s]"
+       "README.md:   0%|          | 0.00/1.87k [00:00<?, ?B/s]"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
     },
     {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "79dfb3203e0e4c14ab49c9e7e4dbc0d1",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "train-00000-of-00001.parquet:   0%|          | 0.00/14.0M [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d23452ee331b4858a7ed6d28dd3ffe5b",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "test-00000-of-00001.parquet:   0%|          | 0.00/1.56M [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ada6c1af8ab14000a9115acb328751e5",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Generating train split:   0%|          | 0/159241 [00:00<?, ? examples/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4299fd6c225a4f708775e8ed1afc1f6a",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Generating test split:   0%|          | 0/17694 [00:00<?, ? examples/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using the latest cached version of the dataset since aynumosir/ainu-corpora couldn't be found on the Hugging Face Hub\n",
+      "Found the latest cached dataset configuration 'default' at /home/mkpoli/.cache/huggingface/datasets/aynumosir___ainu-corpora/default/0.0.0/81c26c21bbd662ae55371f334e0796a99c8b3d61 (last modified on Sat Dec 28 16:27:18 2024).\n"
+     ]
     }
    ],
    "source": [
@@ -129,7 +81,6 @@
     "    label: str\n",
     "\n",
     "\n",
-    "\n",
     "class CorpusItem(TypedDict):\n",
     "    translation: str\n",
     "    sentence: str\n",
@@ -138,7 +89,7 @@
     "\n",
     "sentences_by_book = defaultdict(list)\n",
     "\n",
-    "with open(\"../dictionary/output/wiktionary_ainu_part_of_speech.json\", \"r\") as f:\n",
+    "with open(\"../dictionary/output/combined_part_of_speech.json\", \"r\") as f:\n",
     "    part_of_speech = json.load(f)\n",
     "\n",
     "for text in chain(dataset[\"test\"], dataset[\"train\"]):\n",
@@ -187,27 +138,27 @@
       "sentence:  ponno ne kusu ci=koykokanu wa un=kore yan.\n",
       "translation:  少しですので、私のアイヌ語にお耳を傾けてくださいますようお願い申し上げる次第です。\n",
       "words:  ['ponno', 'ne', 'kusu', 'ci=', 'koykokanu', 'wa', 'un=', 'kore', 'yan']\n",
-      "part of speech:  [[], ['pron', 'pronoun', 'verb', 'determiner', 'parti'], ['adv', 'parti'], ['verb', 'prefix'], [], ['parti'], ['prefix'], ['verb'], ['parti']]\n",
+      "part of speech:  [[], ['determiner', 'pron', 'verb', 'parti', 'pronoun'], ['parti', 'adv'], ['prefix', 'verb'], [], ['parti'], ['prefix'], ['verb'], ['parti']]\n",
       "----------------------------------------------------------------------------------------------------\n",
       "sentence:  ne hi or ta nispa utar ku=koramkor hi ene oka hi aynumosir un aynu utar ka koeturenno sisam mosir ta oka aynu ka ene ne yakka aynu néno aynuitak ani ukoytak pa wa ratci oka apunno oka kuni kosanniyo wa un=kore yan\n",
       "translation:  そこで、私が先生方にお願いしたいということは、北海道にいるアイヌたち、それと一緒に、各地にいるアイヌたちがどのようにしたらアイヌ民族らしくアイヌ語で会話を交わし、静かに豊かに暮らしていけるかを先生方に考えてほしいと私は思い、\n",
       "words:  ['ne', 'hi', 'or', 'ta', 'nispa', 'utar', 'ku=', 'koramkor', 'hi', 'ene', 'oka', 'hi', 'aynumosir', 'un', 'aynu', 'utar', 'ka', 'koeturenno', 'sisam', 'mosir', 'ta', 'oka', 'aynu', 'ka', 'ene', 'ne', 'yakka', 'aynu', 'néno', 'aynuitak', 'ani', 'ukoytak', 'pa', 'wa', 'ratci', 'oka', 'apunno', 'oka', 'kuni', 'kosanniyo', 'wa', 'un=', 'kore', 'yan']\n",
-      "part of speech:  [['pron', 'pronoun', 'verb', 'determiner', 'parti'], ['noun'], ['noun'], ['verb', 'parti'], ['noun'], ['noun'], ['prefix'], [], ['noun'], ['adv'], ['verb', 'pron', 'noun'], ['noun'], [], ['verb', 'parti'], ['noun'], ['noun'], ['parti', 'noun'], [], ['noun'], ['noun'], ['verb', 'parti'], ['verb', 'pron', 'noun'], ['noun'], ['parti', 'noun'], ['adv'], ['pron', 'pronoun', 'verb', 'determiner', 'parti'], ['parti'], ['noun'], [], [], ['verb', 'postpadv', 'parti', 'noun'], [], ['suffix', 'adv', 'verb', 'auxverb', 'root', 'noun'], ['parti'], [], ['verb', 'pron', 'noun'], ['adv'], ['verb', 'pron', 'noun'], ['noun'], [], ['parti'], ['prefix'], ['verb'], ['parti']]\n",
+      "part of speech:  [['determiner', 'pron', 'verb', 'parti', 'pronoun'], ['noun'], ['noun'], ['parti', 'verb'], ['noun'], ['noun'], ['prefix'], [], ['noun'], ['adv'], ['verb', 'noun', 'pron'], ['noun'], [], ['parti', 'verb'], ['noun'], ['noun'], ['parti', 'noun'], [], ['noun'], ['noun'], ['parti', 'verb'], ['verb', 'noun', 'pron'], ['noun'], ['parti', 'noun'], ['adv'], ['determiner', 'pron', 'verb', 'parti', 'pronoun'], ['parti'], ['noun'], [], [], ['postpadv', 'verb', 'noun', 'parti'], [], ['noun', 'adv', 'verb', 'auxverb', 'suffix', 'root'], ['parti'], [], ['verb', 'noun', 'pron'], ['adv'], ['verb', 'noun', 'pron'], ['noun'], [], ['parti'], ['prefix'], ['verb'], ['parti']]\n",
       "----------------------------------------------------------------------------------------------------\n",
       "sentence:  teeta anakne aynumosir mosir so ka ta aynu patek an hi ta anakne uwepeker koraci sinne yuk ne ciki sípe ne ciki nep pakno oka p ne kusu nep a=e rusuy nep a=konrusuy somo ki no aynu patek oka hi ne a korka ne usike un sísam ne manu p upas horutke ekannayukar ek pa ruwe ne.\n",
       "translation:  ずっと昔、アイヌ民族の静かな大地、北海道にアイヌ民族だけが暮らしていた時代、アイヌの昔話と全く同じに、シカであってもシャケであってもたくさんいたので、何を食べたいとも、何を欲しいとも思わず、アイヌ民族だけで暮らしていたが、そのところへ和人という違う民族が雪なだれのように移住してきたのであります。\n",
       "words:  ['teeta', 'anakne', 'aynumosir', 'mosir', 'so', 'ka', 'ta', 'aynu', 'patek', 'an', 'hi', 'ta', 'anakne', 'uwepeker', 'koraci', 'sinne', 'yuk', 'ne', 'ciki', 'sípe', 'ne', 'ciki', 'nep', 'pakno', 'oka', 'p', 'ne', 'kusu', 'nep', 'a=', 'e', 'rusuy', 'nep', 'a=', 'konrusuy', 'somo', 'ki', 'no', 'aynu', 'patek', 'oka', 'hi', 'ne', 'a', 'korka', 'ne', 'usike', 'un', 'sísam', 'ne', 'manu', 'p', 'upas', 'horutke', 'ekannayukar', 'ek', 'pa', 'ruwe', 'ne']\n",
-      "part of speech:  [['noun'], ['parti'], [], ['noun'], ['parti', 'noun'], ['parti', 'noun'], ['verb', 'parti'], ['noun'], ['adv'], ['verb', 'root', 'parti'], ['noun'], ['verb', 'parti'], ['parti'], ['noun'], ['adv'], [], ['noun'], ['pron', 'pronoun', 'verb', 'determiner', 'parti'], ['parti'], [], ['pron', 'pronoun', 'verb', 'determiner', 'parti'], ['parti'], ['noun'], ['adv'], ['verb', 'pron', 'noun'], ['suffix'], ['pron', 'pronoun', 'verb', 'determiner', 'parti'], ['adv', 'parti'], ['noun'], ['verb', 'prefix'], ['verb', 'interj', 'root'], ['parti'], ['noun'], ['verb', 'prefix'], [], ['adv'], ['verb'], ['colloc', 'suffix'], ['noun'], ['adv'], ['verb', 'pron', 'noun'], ['noun'], ['pron', 'pronoun', 'verb', 'determiner', 'parti'], ['verb', 'auxverb'], ['parti'], ['pron', 'pronoun', 'verb', 'determiner', 'parti'], [], ['verb', 'parti'], [], ['pron', 'pronoun', 'verb', 'determiner', 'parti'], [], ['suffix'], ['noun'], [], [], ['verb'], ['suffix', 'adv', 'verb', 'auxverb', 'root', 'noun'], ['verb', 'noun'], ['pron', 'pronoun', 'verb', 'determiner', 'parti']]\n",
+      "part of speech:  [['noun'], ['parti'], [], ['noun'], ['parti', 'noun'], ['parti', 'noun'], ['parti', 'verb'], ['noun'], ['adv'], ['parti', 'verb', 'root'], ['noun'], ['parti', 'verb'], ['parti'], ['noun'], ['adv'], [], ['noun'], ['determiner', 'pron', 'verb', 'parti', 'pronoun'], ['parti'], [], ['determiner', 'pron', 'verb', 'parti', 'pronoun'], ['parti'], ['noun'], ['adv'], ['verb', 'noun', 'pron'], ['suffix'], ['determiner', 'pron', 'verb', 'parti', 'pronoun'], ['parti', 'adv'], ['noun'], ['prefix', 'verb'], ['interj', 'verb', 'root'], ['parti'], ['noun'], ['prefix', 'verb'], [], ['adv'], ['verb'], ['suffix'], ['noun'], ['adv'], ['verb', 'noun', 'pron'], ['noun'], ['determiner', 'pron', 'verb', 'parti', 'pronoun'], ['auxverb', 'verb'], ['parti'], ['determiner', 'pron', 'verb', 'parti', 'pronoun'], [], ['parti', 'verb'], [], ['determiner', 'pron', 'verb', 'parti', 'pronoun'], [], ['suffix'], ['noun'], [], [], ['verb'], ['noun', 'adv', 'verb', 'auxverb', 'suffix', 'root'], ['verb', 'noun'], ['determiner', 'pron', 'verb', 'parti', 'pronoun']]\n",
       "----------------------------------------------------------------------------------------------------\n",
       "sentence:  heino　u kor turesi\n",
       "translation:  の妹が\n",
       "words:  ['heino', 'u', 'kor', 'turesi']\n",
-      "part of speech:  [[], [], ['verb', 'parti'], ['noun']]\n",
+      "part of speech:  [[], [], ['parti', 'verb'], ['noun']]\n",
       "----------------------------------------------------------------------------------------------------\n",
       "sentence:  iyonnuppa ye a ye a\n",
       "translation:  告げ口して何度も言って\n",
       "words:  ['iyonnuppa', 'ye', 'a', 'ye', 'a']\n",
-      "part of speech:  [[], ['verb', 'noun'], ['verb', 'auxverb'], ['verb', 'noun'], ['verb', 'auxverb']]\n",
+      "part of speech:  [[], ['verb', 'noun'], ['auxverb', 'verb'], ['verb', 'noun'], ['auxverb', 'verb']]\n",
       "----------------------------------------------------------------------------------------------------\n",
       "sentence:  paye=an ayne\n",
       "translation:  行くうちに\n",
@@ -217,32 +168,32 @@
       "sentence:  soyne=an akusu nani nea ekimne ru kari ekimun si... hoyupu=an rusuy wa\n",
       "translation:  私が外に出てみると、すぐその山へ続く道から、山の方へ私は走りたくて\n",
       "words:  ['soyne', '=an', 'akusu', 'nani', 'nea', 'ekimne', 'ru', 'kari', 'ekimun', 'si', 'hoyupu', '=an', 'rusuy', 'wa']\n",
-      "part of speech:  [['verb'], ['verb', 'suffix'], ['conj'], ['adv'], ['adnom'], ['adv', 'verb'], ['noun'], [], [], ['root', 'noun'], ['verb'], ['verb', 'suffix'], ['parti'], ['parti']]\n",
+      "part of speech:  [['verb'], ['verb', 'suffix'], ['conj'], ['adv'], ['adnom'], ['adv', 'verb'], ['noun'], [], [], ['noun', 'root'], ['verb'], ['verb', 'suffix'], ['parti'], ['parti']]\n",
       "----------------------------------------------------------------------------------------------------\n",
       "sentence:  rewsi uci... un... cise or pakno poka paye=an wa inkanrusuy=’an kus,\n",
       "translation:  泊まり小屋のところまででも行って様子を見たいと思ったので、\n",
       "words:  ['rewsi', 'uci', 'un', 'cise', 'or', 'pakno', 'poka', 'paye', '=an', 'wa', 'inkanrusuy', '=’an', 'kus']\n",
-      "part of speech:  [[], [], ['verb', 'parti'], ['noun'], ['noun'], ['adv'], ['parti'], ['verb'], ['verb', 'suffix'], ['parti'], [], [], ['verb']]\n",
+      "part of speech:  [[], [], ['parti', 'verb'], ['noun'], ['noun'], ['adv'], ['parti'], ['verb'], ['verb', 'suffix'], ['parti'], [], [], ['verb']]\n",
       "----------------------------------------------------------------------------------------------------\n",
       "sentence:  tu aynu oka hine\n",
       "translation:  二人の人間がいて\n",
       "words:  ['tu', 'aynu', 'oka', 'hine']\n",
-      "part of speech:  [['num'], ['noun'], ['verb', 'pron', 'noun'], ['conj', 'parti']]\n",
+      "part of speech:  [['num'], ['noun'], ['verb', 'noun', 'pron'], ['parti', 'conj']]\n",
       "----------------------------------------------------------------------------------------------------\n",
       "sentence:  Neun poka neun poka ku=sapaha ku=noynoye kor ku=ye kor k=an\n",
       "translation:  なんとか私は頭をひねりながら話しています\n",
       "words:  ['neun', 'poka', 'neun', 'poka', 'ku=', 'sapaha', 'ku=', 'noynoye', 'kor', 'ku=', 'ye', 'kor', 'k=', 'an']\n",
-      "part of speech:  [['adv'], ['parti'], ['adv'], ['parti'], ['prefix'], ['noun'], ['prefix'], [], ['verb', 'parti'], ['prefix'], ['verb', 'noun'], ['verb', 'parti'], [], ['verb', 'root', 'parti']]\n",
+      "part of speech:  [['adv'], ['parti'], ['adv'], ['parti'], ['prefix'], ['noun'], ['prefix'], [], ['parti', 'verb'], ['prefix'], ['verb', 'noun'], ['parti', 'verb'], [], ['parti', 'verb', 'root']]\n",
       "----------------------------------------------------------------------------------------------------\n",
       "sentence:  Siraoi wano basu k=o wa Tomakomai ta ku=ran.\n",
       "translation:  私は白老からバスに乗って苫小牧で下りました\n",
       "words:  ['siraoi', 'wano', 'basu', 'k=', 'o', 'wa', 'tomakomai', 'ta', 'ku=', 'ran']\n",
-      "part of speech:  [[], ['parti'], [], [], ['verb'], ['parti'], [], ['verb', 'parti'], ['prefix'], ['verb']]\n",
+      "part of speech:  [[], ['parti'], [], [], ['verb'], ['parti'], [], ['parti', 'verb'], ['prefix'], ['verb']]\n",
       "----------------------------------------------------------------------------------------------------\n",
       "sentence:  E=sini ka somo ki no e=arikiki siri?\n",
       "translation:  あなたは休みもしないで働いていたのですか？\n",
       "words:  ['e=', 'sini', 'ka', 'somo', 'ki', 'no', 'e=', 'arikiki', 'siri']\n",
-      "part of speech:  [['prefix'], [], ['parti', 'noun'], ['adv'], ['verb'], ['colloc', 'suffix'], ['prefix'], ['verb'], ['noun']]\n",
+      "part of speech:  [['prefix'], [], ['parti', 'noun'], ['adv'], ['verb'], ['suffix'], ['prefix'], ['verb'], ['noun']]\n",
       "----------------------------------------------------------------------------------------------------\n"
      ]
     }
